--- a/Shop/accounts/templates/accounts/login.html
+++ b/Shop/accounts/templates/accounts/login.html
@@ -40,7 +40,7 @@
 					</span>
 				</div>
 
-				<form class="login100-form validate-form">
+				<form action="{% url 'accounts:user_login' %}" class="login100-form validate-form">
 					<div class="wrap-input100 validate-input m-b-26" data-validate="Username is required">
 						{% csrf_token %}
                      {{ form.as_p }}
